--- a/.github/workflows/publish-documentation-gh-pages.yml
+++ b/.github/workflows/publish-documentation-gh-pages.yml
@@ -20,6 +20,6 @@ jobs:
           cache: 'poetry'
 
       - name: Install dependencies
-        run: poetry install --only docs
+        run: poetry install
 
       - run: poetry run mkdocs gh-deploy --force
