--- a/.github/workflows/publish-documentation-gh-pages.yml
+++ b/.github/workflows/publish-documentation-gh-pages.yml
@@ -5,6 +5,9 @@ on:
   release:
     types: [ released ]  # only deploy when we make a new `latest` release
 
+permissions:
+  pages: write
+
 jobs:
 
   build-publish:
