--- a/.github/workflows/publish-documentation-gh-pages.yml
+++ b/.github/workflows/publish-documentation-gh-pages.yml
@@ -6,7 +6,7 @@ on:
     types: [ released ]  # only deploy when we make a new `latest` release
 
 permissions:
-  repo: write
+  contents: write
 
 jobs:
 
