--- a/tests/cli/controller/custom-function/controller.yml
+++ b/tests/cli/controller/custom-function/controller.yml
@@ -1,11 +1,11 @@
 !!python/object:autora.controller.controller.Controller
-_experiment_runner_callable: &id002 !!python/name:lib.plus_1 ''
+_experiment_runner_callable: &id002 !!python/name:func.plus_1 ''
 _experimentalist_pipeline: &id004 !!python/object:autora.experimentalist.pipeline.Pipeline
   params: {}
   steps:
   - !!python/tuple
     - ten_random_samples
-    - !!python/name:lib.ten_random_samples ''
+    - !!python/name:func.ten_random_samples ''
 _theorist_estimator: &id006 !!python/object:sklearn.linear_model._base.LinearRegression
   _sklearn_version: 1.2.2
   copy_X: true
