--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ tqdm = "^4.64.0"
 typer = "^0.7.0"
 rich = "^13.3.3"
 shellingham = "^1.5.0.post1"
+pyyaml = "^6.0"
+
+
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
