--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,21 @@ edit_uri: 'blob/main/docs/'
 
 theme:
   name: material
+  logo: img/logo.png
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      primary: black
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: black
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   custom_dir: mkdocs/overrides
   features:
     - content.action.edit
