--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,9 @@
 site_name: Autonomous Empirical Research
 repo_url: 'https://github.com/autoresearch/autora'
 edit_uri: 'blob/main/docs/'
-colab_base_url: 'https://colab.research.google.com/github/AutoResearch/autora/blob/gh-pages'
+
+extra:
+  colab_base_url: 'https://colab.research.google.com/github/AutoResearch/autora/blob/gh-pages'
 
 theme:
   name: material
