--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,38 @@
-[tool.poetry]
+[project]
 name = "autora"
 version = "0.0.0"
-description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process. This framework implements tools for autonomously and iteratively generating 1) new theories to describe real-world data, and 2) experiments to invalidate those theories and seed a new cycle of theory-making. The experiments will be run online via crowd-sourcing platforms (MTurk, Prolific)."
+description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process."
 authors = [
-    "Sebastian Musslick <sebastian_musslick@brown.edu>",
-    "John Gerrard Holland <john_holland1@brown.edu>",
+    {name = "Sebastian Musslick", email="sebastian_musslick@brown.edu"},
+    {name = "John Gerrard Holland", email="john_holland1@brown.edu"},
 ]
 readme = "README.md"
+requires-python = ">=3.8,<3.11"
+dependencies = ["autora-core"]
+
+[project.optional-dependencies]
+theorists = [
+    "autora-darts",
+]
+dev = [
+    "pre-commit>=2.20,<4.0",
+    "mkdocs-material>=8.5.10,<10.0.0",
+    "mkdocs-gen-files>=0.3.4,<0.5.0",
+    "mkdocs-literate-nav>=0.4.1,<0.7.0",
+    "mkdocs-section-index>=0.3.4",
+    "mkdocstrings-python>=0.7.1,<0.10.0",
+    "mkdocs-jupyter>=0.24.1",
+    "mkdocs-multirepo-plugin>=0.6.1",
+]
+
+[project.urls]
 homepage = "https://musslick.github.io/AER_website/Research.html"
 repository = "https://github.com/AutoResearch/autora"
 documentation = "https://autoresearch.github.io/autora/"
 
-[tool.poetry.dependencies]
-python = ">=3.8.10,<3.11"
-autora-core = "*"
-autora-darts = "*"
-
-[tool.poetry.group.pre-commit.dependencies]
-pre-commit = ">=2.20,<4.0"
-
-[tool.poetry.group.docs.dependencies]
-mkdocs-material = ">=8.5.10,<10.0.0"
-mkdocs-gen-files = ">=0.3.4,<0.5.0"
-mkdocs-literate-nav = ">=0.4.1,<0.7.0"
-mkdocs-section-index = "^0.3.4"
-mkdocstrings-python = ">=0.7.1,<0.10.0"
-mkdocs-jupyter = "^0.24.1"
-mkdocs-multirepo-plugin = "^0.6.1"
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
 
-[tool.isort]
-profile = "black"
+[tool.setuptools.packages.find]
+where = []  # no source files for this repository
