--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,4 +38,4 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = []  # no source files for this repository
+where = ["src"]
