--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,13 @@ core = [
 theorists = [
     "autora-darts",
 ]
-dev = [  # TODO: move these to autora-core[dev] dependencies
+dev = [
     "build",
-    "pre-commit",
+    "twine",
+    "autora[docs]",
+    "autora[core-dev]",
+    ]
+docs = [  # TODO: move these to autora-core[docs] dependencies
     "mkdocs-material>=8.5.10,<10.0.0",
     "mkdocs-gen-files>=0.3.4,<0.5.0",
     "mkdocs-literate-nav>=0.4.1,<0.7.0",
@@ -28,9 +32,13 @@ dev = [  # TODO: move these to autora-core[dev] dependencies
     "mkdocs-jupyter>=0.24.1",
     "mkdocs-multirepo-plugin>=0.6.1",
 ]
+core-dev = [  # TODO: move these to autora-core[dev] dependencies
+    "autora[dev]",
+    "pre-commit",
+]
 
 [project.urls]
-homepage = "https://musslick.github.io/AER_website/Research.html"
+homepage = "https://www.empiricalresearch.ai/"
 repository = "https://github.com/AutoResearch/autora"
 documentation = "https://autoresearch.github.io/autora/"
 
