--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ plugins:
   - search
   - multirepo:
       # (optional) tells multirepo to clean up the temporary directory after site is built.
-      cleanup: false
+      cleanup: true
       # if set the docs directory will not be removed when importing docs.
       # When using this with a nav section in an imported repo you must keep the
       # docs directory in the path (e.g., docs/path/to/file.md).
