--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ tab_width = 4
 profile = black
 max_line_length = 100
 
-[{*.yml,*.yaml}]
+[{*.yml,*.yaml,*.toml}]
 indent_size = 2
 tab_width = 2
 
