deps: update project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,44 @@
 [project]
 name = "autora"
 description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process."
-authors = [{ name = "Sebastian Musslick", email = "sebastian_musslick@brown.edu" },
+authors = [
+  { name = "Sebastian Musslick", email = "sebastian_musslick@brown.edu" },
   { name = "John Gerrard Holland", email = "john_holland1@brown.edu" },
 ]
 readme = "README.md"
-requires-python = ">=3.8,<3.11"
 license = { file = "LICENSE.md" }
 dynamic = ["version"]
 
+dependencies = [
+  "autora-core"
+]
+
 [project.optional-dependencies]
-core = ["autora-core"]
-theorists = ["autora-darts"]
 dev = [
-  "build",
-  "twine",
-  "autora[docs]",
-  "autora[core-dev]",
+  "autora-core[dev]",
 ]
-docs = [# TODO: move these to autora-core[docs] dependencies
-  "mkdocs-material>=8.5.10,<10.0.0",
-  "mkdocs-gen-files>=0.3.4,<0.5.0",
-  "mkdocs-literate-nav>=0.4.1,<0.7.0",
-  "mkdocs-section-index>=0.3.4",
-  "mkdocstrings-python>=0.7.1,<0.10.0",
-  "mkdocs-jupyter>=0.24.1",
-  "mkdocs-multirepo-plugin>=0.6.1",
+
+all = [
+  "autora[core]",
+  "autora[all-theorists]",
+  "autora[all-experimentalists]",
+  "autora[all-experiment-runners]",
+  "autora[synthetic-experiments]",
 ]
-core-dev = [# TODO: move these to autora-core[dev] dependencies
-  "autora[dev]",
-  "pre-commit",
+
+core = ["autora-core"]
+
+all-theorists = [
+  "autora-theorist-darts",
+  "autora-theorist-bms",
+  "autora-theorist-bsr",
 ]
+theorist-darts = ["autora-theorist-darts"]
+
+all-experimentalists = []
+all-experiment-runners = []
+synthetic-experiments = []
+
 
 [project.urls]
 homepage = "https://www.empiricalresearch.ai/"
