--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 
+INHERIT: mkdocs/base.yml  # use the shared AutoRA configuration by default
+
 site_name: Autonomous Empirical Research
 repo_url: 'https://github.com/autoresearch/autora'
 edit_uri: 'blob/main/docs/'
@@ -8,7 +10,6 @@ extra:
   colab_base_url: 'https://colab.research.google.com/github/AutoResearch/autora/blob/gh-pages'
 
 theme:
-  name: material
   logo: img/logo.png
   palette:
     # Palette toggle for light mode
@@ -25,31 +26,15 @@ theme:
         icon: material/brightness-4
         name: Switch to light mode
   custom_dir: mkdocs/overrides
-  features:
-    - content.action.edit
 
 plugins:
-  - search
   - multirepo:
       # (optional) tells multirepo to clean up the temporary directory after site is built.
-      cleanup: true
+      cleanup: false
       # if set the docs directory will not be removed when importing docs.
       # When using this with a nav section in an imported repo you must keep the
       # docs directory in the path (e.g., docs/path/to/file.md).
       keep_docs_dir: true
-  - mkdocs-jupyter:
-      include_source: true
-      execute: false
-      ignore_h1_titles: true
-
-markdown_extensions:
-  - pymdownx.arithmatex:
-      generic: true
-
-extra_javascript:
-  - javascripts/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 
 nav:
@@ -61,6 +46,7 @@ nav:
 - User Guide:
   - Theorists:
     - Overview: 'theorist/overview.md'
+    - DARTS: '!import file:///Users/jholla10/Developer/autora-darts/?branch=main&docs_dir=docs&multi_docs=True'
   - Experimentalists:
     - Overview: 'experimentalists/overview.md'
   - Synthetic Experiments
