deps: include theorist-darts in autora

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ all = [
 ]
 
 all-theorists = [
+  "autora[theorist-darts]",
+]
+theorist-darts = [
   "autora-theorist-darts",
 ]
 all-experimentalists = [
@@ -36,6 +39,7 @@ all-experiment-runners = [
 synthetic-experiments = [
   "autora-synthetic-data"
 ]
+
 
 
 [project.urls]
