chore: make navigation more shallow

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ theme:
   features:
     - content.action.edit
     - content.action.view
+    - navigation.indexes
 
 nav:
 - Introduction: 'index.md'
