--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
     - BMS
   - Experimentalists:
     - Overview: 'experimentalists/overview.md'
+    - Novelty Sampler: '!import https://github.com/autoresearch/autora-novelty-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Inequality Sampler: '!import https://github.com/autoresearch/autora-experimentalist-inequality-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Experiment Runners:
     - Overview: 'experiment-runner/overview.md'
