docs: add snippets for docs

--- a/mkdocs/base.yml
+++ b/mkdocs/base.yml
@@ -17,6 +17,7 @@ markdown_extensions:
   pymdownx.superfences: {}
   pymdownx.arithmatex: # required for equation display
     generic: true
+  pymdownx.snippets: {}
 
 extra_javascript: [ 
   # requirements for pymdownx.arithmetex:
