--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,12 @@ seaborn = ">=0.11.1,<0.13.0"
 scikit-learn = "^1.1.1"
 sympy = "^1.10.1"
 tinkerforge = {version = "^2.1.25", optional=true}
-torch = "2.0.1"
 tqdm = "^4.64.0"
+torch = [
+    {version = "2.0.1", markers = "sys_platform == 'darwin'"},
+    {version = "2.0.1", markers = "sys_platform == 'win32'"},
+    {version = "2.0.1", markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cpu"}
+]
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
