--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,17 @@ scikit-learn = "^1.1.1"
 sympy = "^1.10.1"
 tinkerforge = {version = "^2.1.25", optional=true}
 tqdm = "^4.64.0"
-torch = [
-    {version = "2.0.1", markers = "sys_platform == 'darwin'"},
-    {version = "2.0.1", markers = "sys_platform == 'win32'"},
-    {version = "2.0.1", markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cpu"}
-]
+torch = {version = "2.0.1", source = "pytorch-cpu"}
+#torch = [
+#    {version = "2.0.1", markers = "sys_platform == 'darwin' or sys_platform == 'win32'"},
+#    {version = "2.0.1", source = "pytorch-cpu", markers = "sys_platform == 'linux'"}
+#]
+#    {version = "2.0.1", markers = "sys_platform == 'win32'"},
+
+[[tool.poetry.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+secondary = true
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
