--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ scikit-learn = "^1.1.1"
 sympy = "^1.10.1"
 tinkerforge = {version = "^2.1.25", optional=true}
 tqdm = "^4.64.0"
-torch = {version = "2.0.1", source = "pytorch-cpu"}
+torch = [
+    {version = "2.0.1", markers = "sys_platform == 'win32' or sys_platform == 'darwin'"},
+    {version = "2.0.1", source = "pytorch-cpu", markers = "sys_platform == 'linux'"}
+]
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
@@ -59,4 +62,4 @@ profile = "black"
 [[tool.poetry.source]]
 name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/cpu"
-secondary = false
+secondary = true
