--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,13 @@ theorist-bsr = [
 all-experimentalists = [
   "autora[experimentalist-inequality-sampler]",
   "autora[experimentalist-novelty-sampler]",
+  "autora[experimentalist-sampler-nearest-value-sampler]",
 ]
 experimentalist-novelty-sampler =[
-  "autora-novelty-sampler"
+  "autora-experimentalist-novelty-sampler"
+]
+experimentalist-sampler-nearest-value-sampler =[
+  "autora-experimentalist-sampler-nearest-value-sampler"
 ]
 experimentalist-inequality-sampler =[
   "autora-experimentalist-inequality-sampler"
