--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,8 @@ nav:
     - Novelty Sampler: '!import https://github.com/autoresearch/autora-experimentalist-novelty-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Inequality Sampler: '!import https://github.com/autoresearch/autora-experimentalist-inequality-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Nearest Value Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-nearest-value-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Model Disagreement Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-model-disagreement-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Uncertainty Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-uncertainty-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Experiment Runners:
     - Home: 'experiment-runner/index.md'
   - Synthetic Datasets: '!import https://github.com/autoresearch/autora-synthetic-data/?branch=main&extra_imports=["mkdocs/base.yml"]'
