--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,10 @@ sympy = "^1.10.1"
 tinkerforge = {version = "^2.1.25", optional=true}
 tqdm = "^4.64.0"
 torch = [
-    {version = "2.0.1", markers = "sys_platform == 'win32' or sys_platform == 'darwin'"},
+    {version = "2.0.1", source="pypi", markers = "sys_platform == 'darwin' or sys_platform == 'win32'"},
     {version = "2.0.1", source = "pytorch-cpu", markers = "sys_platform == 'linux'"}
 ]
+# {version = "2.0.1", source="pypi", markers = "sys_platform == 'win32'"},
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
